--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.1",
+    "helmet": "^7.1.0",
     "puppeteer": "^22.6.0",
     "qrcode-terminal": "^0.12.0",
     "wbm": "^1.1.16",
